<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="5dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Mid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/mid_value"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/tid_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Mid_value"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tid_value"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/tid_value"
                android:layout_marginTop="8dp"
                android:text="@string/amount"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>
            <TextView
                android:id="@+id/narration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/amount_value"
                android:layout_marginTop="8dp"
                android:text="@string/narration_value"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>